--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Integrarte</title>
+		<title>Revisapp</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>IntegrARTE</h1>
+				<h1>Registro BNI</h1>
 				<p>Una manera simple de organizar tus eventos.<br />
 				Todo desde una app.</p>
 			</header>
