--- a/reporte.html
+++ b/reporte.html
@@ -157,7 +157,7 @@
 
 
 <div class="container" >
-    <table class="table table-dark table-striped">
+    <table class="table table-hover table-striped">
       <thead>
         <tr>
           <th>Fecha</th>
