--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Registro BNI</h1>
-				<p>Una manera simple de organizar tus eventos.<br />
-				Todo desde una app.</p>
+				<h1>Revisapp</h1>
+				<p>Una manera simple de hacer eficiente tu evento.</p>
 			</header>
 
 		<!-- Signup Form -->
@@ -27,10 +26,10 @@
 				<input type="submit" value="Iniciar Sesión" />
 			</form>
 
-            ¿No tienes cuenta? Da clic aquí
+          <span onclick="myFunction()" style="cursor: pointer;"> ¿No tienes cuenta? Da clic aquí</span> 
 
 
-            <div>
+            <div style="display: none;" id="mostratSign">
                 <form id="signup-form2" method="post" action="#">
 					<input type="text" name="name" id="name2" placeholder="Nombre Completo" />
                     <input type="email" name="email" id="email2" placeholder="Correo electrónico" />
@@ -39,7 +38,7 @@
                 </form>
             </div>
 
-		<!-- Footer -->
+		<!-- Footer
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -48,12 +47,22 @@
 					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; 2022.</li><li>IntegrARTE</li>
+					<li>&copy; 2022.</li><li>Revisapp</li>
 				</ul>
 			</footer>
-
+ -->
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
+			<script>
+				function myFunction() {
+    var x = document.getElementById("mostratSign");
+    if (x.style.display === "none") {
+        x.style.display = "block";
+    } else {
+        x.style.display = "none";
+    }
+}
+				</script>
        	<!--   <script type="module" src="./index.js" type="module"></script> -->
 		   <script type="module" src="./log.js" type="module"></script>
 
