--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
 					<nav id="nav">
 						<a href="#" class="icon solid fa-user-circle"><span>Usuario</span></a>
 						<a href="#work" class="icon solid fa-qrcode"><span>Acceso</span></a>
-						<a href="#escaner" class="icon solid fa-mobile-alt"><span>Escaner</span></a>
+						<a id="escaner" href="#escaner"  style="display: none;" class="icon solid fa-mobile-alt"><span>Escaner</span></a>
 						<a id="cerrar"  href="#contact" class="icon solid fa-power-off"><span>Cerrar Sesión</span></a>
 						<!--<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>-->
 					</nav>
