--- a/home.html
+++ b/home.html
@@ -71,6 +71,7 @@
 			<a href="#work" class="icon solid fa-qrcode"><span>Acceso</span></a>
 			<a id="escaner" href="#escaner" style="display: none;"
 				class="icon solid fa-mobile-alt"><span>Escaner</span></a>
+				<a href="reporte2.html" class="icon solid fa-qrcode"><span>Networking</span></a>
 			<a id="cerrar" href="#contact" class="icon solid fa-power-off"><span>Cerrar Sesión</span></a>
 			<!--<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>-->
 		</nav>
@@ -83,11 +84,12 @@
 				<header>
 					<h1 id="nombre"></h1>
 					<p>Bienvenid@</p>
-
+				
+					<h4>Boleto participante: <span style="color: red;">A21</span></h4>
 				</header>
 				<a href="#work" class="jumplink pic">
 					<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-					<img src="imageshome/me.jpg" alt="" />
+					<img src="imageshome/me.png" alt="" />
 				</a>
 			</article>
 
