--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
 			<a href="#work" class="icon solid fa-qrcode"><span>Acceso</span></a>
 			<a id="escaner" href="#escaner" style="display: none;"
 				class="icon solid fa-mobile-alt"><span>Escaner</span></a>
-				<a href="reporte2.html" class="icon solid fa-qrcode"><span>Networking</span></a>
+				<a href="reporte2.html" class="icon solid fa-rss"><span>Networking</span></a>
 			<a id="cerrar" href="#contact" class="icon solid fa-power-off"><span>Cerrar Sesión</span></a>
 			<!--<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>-->
 		</nav>
