--- a/reporte.html
+++ b/reporte.html
@@ -157,6 +157,7 @@
 
 
 <div class="container" >
+  <div class="table-responsive">
     <table class="table table-hover table-striped">
       <thead>
         <tr>
@@ -172,6 +173,7 @@
       
       </tbody>
     </table>
+  </div>
   </div>
 
 
