--- a/reporte2.html
+++ b/reporte2.html
@@ -163,6 +163,7 @@
     <input type="text" class="form-control" placeholder="*">
 
   </div>
+  <div class="table-responsive">
     <table class="table table-hover table-striped">
       <thead>
         <tr>
@@ -170,7 +171,7 @@
           <th>Esfera de Contactos</th>
           <th>Giro de Negocios</th>
           <th>Producto estrella</th>
-          <th>Teléfono</th>
+          <th>LLamar</th>
           <th>Whatsapp</th>
           
         </tr>
@@ -180,6 +181,7 @@
       
       </tbody>
     </table>
+  </div>
   </div>
 
 
