--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
 			<a href="#work" class="icon solid fa-qrcode"><span>Acceso</span></a>
 			<a id="escaner" href="#escaner" style="display: none;"
 				class="icon solid fa-mobile-alt"><span>Escaner</span></a>
-				<a href="reporte2.html" class="icon solid fa-rss"><span>Networking</span></a>
+			<!--	<a href="reporte2.html" class="icon solid fa-rss"><span>Networking</span></a> -->
 			<a id="cerrar" href="#contact" class="icon solid fa-power-off"><span>Cerrar Sesión</span></a>
 			<!--<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>-->
 		</nav>
@@ -85,7 +85,7 @@
 					<h1 id="nombre"></h1>
 					<p>Bienvenid@</p>
 				
-					<h4>Boleto participante: <span style="color: red;">A21</span></h4>
+					<h4>Boleto participante: <span id="boleto" style="color: red;">A21</span></h4>
 				</header>
 				<a href="#work" class="jumplink pic">
 					<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -149,8 +149,8 @@
 		<!-- Footer -->
 		<div id="footer">
 			<ul class="copyright">
-				<li>&copy; Untitled.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>&copy; Revisapp 2022.</li>
+				<li>Éste Proyecto es patrocinado por: <a target="_blank" href="https://cyapp.io/">Web Apps & Chatbots</a></li>
 			</ul>
 		</div>
 
