separacion de inicio de sesion

--- a/registro.html
+++ b/registro.html
@@ -19,17 +19,9 @@
 				<p>Una manera simple de hacer eficiente tu evento.</p>
 			</header>
 
-		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#">
-                <input type="email" name="email" id="email" placeholder="Correo electrónico" />
-				<input type="password" name="*password" id="password" placeholder="Contraseña" />
-				<input type="submit" value="Iniciar Sesión" />
-			</form>
+		
 
-         <!-- <span onclick="myFunction()" style="cursor: pointer;"> ¿No tienes cuenta? Da clic aquí</span> -->
-
-
-            <div style="display: none;" id="mostratSign">
+            <div id="mostratSign">
                 <form id="signup-form2" method="post" action="#">
 					<input type="text" name="name" id="name2" placeholder="Nombre Completo" />
                     <input type="email" name="email" id="email2" placeholder="Correo electrónico" />
