--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<input type="submit" value="Iniciar Sesión" />
 			</form>
 
-         <!-- <span onclick="myFunction()" style="cursor: pointer;"> ¿No tienes cuenta? Da clic aquí</span> -->
+       <!---   <span onclick="myFunction()" style="cursor: pointer;"> ¿No tienes cuenta? Da clic aquí</span> 
 
 
             <div style="display: none;" id="mostratSign">
@@ -37,6 +37,7 @@
                     <input type="submit" value="Crear cuenta" />
                 </form>
             </div>
+		-->
 
 		<!-- Footer
 			<footer id="footer">
