--- a/registro.html
+++ b/registro.html
@@ -21,14 +21,14 @@
 
 		
 
-            <div id="mostratSign">
-                <form id="signup-form2" method="post" action="#">
+           
+                <form id="signup-form2" method="post" action="">
 					<input type="text" name="name" id="name2" placeholder="Nombre Completo" />
                     <input type="email" name="email" id="email2" placeholder="Correo electrónico" />
                     <input type="password" name="*password" id="password2" placeholder="Contraseña" />
                     <input type="submit" value="Crear cuenta" />
                 </form>
-            </div>
+         
 
 		<!-- Footer
 			<footer id="footer">
@@ -44,19 +44,19 @@
 			</footer>
  -->
 		<!-- Scripts -->
-			<script src="assets/js/main.js"></script>
-			<script>
-				function myFunction() {
-    var x = document.getElementById("mostratSign");
-    if (x.style.display === "none") {
-        x.style.display = "block";
-    } else {
-        x.style.display = "none";
-    }
+		<script src="assets/js/main.js"></script>
+		<script>
+			function myFunction() {
+var x = document.getElementById("mostratSign");
+if (x.style.display === "none") {
+	x.style.display = "block";
+} else {
+	x.style.display = "none";
 }
-				</script>
-       	<!--   <script type="module" src="./index.js" type="module"></script> -->
-		   <script type="module" src="./log.js" type="module"></script>
+}
+			</script>
+	   <!--   <script type="module" src="./index.js" type="module"></script> -->
+	   <script type="module" src="./log2.js" type="module"></script>
 
 	</body>
 </html>
