--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
 		<nav id="nav">
 			<a href="#" class="icon solid fa-user-circle"><span>Usuario</span></a>
 			<a href="#work" class="icon solid fa-qrcode"><span>Acceso</span></a>
-			<a id="escaner" href="#escaner" style="display: none;"
+			<a id="escaner" href="acceso.html" style="display: none;"
 				class="icon solid fa-mobile-alt"><span>Escaner</span></a>
 			<!--	<a href="reporte2.html" class="icon solid fa-rss"><span>Networking</span></a> -->
 			<a id="cerrar" href="#contact" class="icon solid fa-power-off"><span>Cerrar Sesión</span></a>
